// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField TextField normal 1`] = `
<span>
  <input
    aria-describedby={null}
    aria-invalid="false"
    className="textField base enabled normal medium"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
</span>
`;

exports[`TextField TextField with autocomplete 1`] = `
<span>
  <input
    aria-describedby={null}
    aria-invalid="false"
    className="textField base enabled normal medium"
    disabled={false}
    id="test"
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
</span>
`;

exports[`TextField TextField with error 1`] = `
<span>
  <input
    aria-describedby={null}
    aria-invalid="true"
    className="textField base enabled errored medium"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize1 red alignLeft breakWord fontWeightNormal"
    >
      <span
        id="test-error"
      >
        error message
      </span>
    </div>
  </div>
</span>
`;

exports[`TextField TextField with hasError 1`] = `
<span>
  <input
    aria-describedby={null}
    aria-invalid="true"
    className="textField base enabled errored medium"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
</span>
`;

exports[`TextField TextField with name 1`] = `
<span>
  <input
    aria-describedby={null}
    aria-invalid="false"
    className="textField base enabled normal medium"
    disabled={false}
    id="test"
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
</span>
`;
